2003-08-12  Keisuke Nishida  <knishida@netlab.jp>

	* byteswap.h: New file.
	* byteorder.h: Removed.

2003-08-12  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_return_code): Removed.

2003-08-10  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (COB_FLAG_BINARY_SWAP): New macro.
	* move.h, move.c (cob_binary_get_int): New function.
	(cob_binary_get_int64): New function.
	(cob_binary_set_int): New function.
	(cob_binary_set_int64): New function.
	* common.h (COB_TYPE_NUMERIC_NATIVE): Removed.
	* common.h, common.c (cob_binary_convert): Removed.
	* move.c (cob_move_display_to_native): Removed.
	(cob_move_native_to_display): Removed.
	* numeric.c (cob_decimal_set_native): Removed.
	(cob_decimal_get_native): Removed.

2003-08-09  Keisuke Nishida  <knishida@netlab.jp>

	* call.c (cob_call_error): Exit with status 1.

2003-08-07  Keisuke Nishida  <knishida@netlab.jp>

	* byteorder.h: New file.
	* common.h (COB_TYPE_NUMERIC_NATIVE): New macro.
	* common.h, common.c (cob_binary_convert): New function.
	* move.c (cob_move_display_to_native): New function.
	(cob_move_native_to_display): New function.
	* numeric.c (cob_decimal_set_native): New function.
	(cob_decimal_get_native): New function.

2003-08-05  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (COB_WRITE_MASK, COB_WRITE_LINES, COB_WRITE_PAGE)
	(COB_WRITE_AFTER, COB_WRITE_BEFORE): New macros.
	* fileio.h, fileio.c (cob_write_page, cob_write_lines): Removed.
	(cob_write): Take third argument.
	* fileio.c (file_write_opt): New function.
	(FILE_WRITE_AFTER, FILE_WRITE_BEFORE): New macros.

2003-07-28  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_exception): Removed.

2003-06-29  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h, fileio.c (cob_sort_init): Removed the 3rd argument.
	(cob_sort_init_key): New function.

2003-06-28  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_cmp_result): Removed.

2003-06-25  Keisuke Nishida  <knishida@netlab.jp>
